--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ header {
   color: white;
 }
 
+footer ion-icon {
+  color: white;
+  font-size: 25px;
+}
+
 .navbar-toggler.active {
   border: none;
 }
@@ -103,4 +108,10 @@ header {
   background-color: white;
   color: white;
   transition-delay: 0.6s;
+}
+
+footer,
+footer a {
+  background-color: var(--bg-color);
+  color: white;
 }
